force-app/main/default/objects/Registration_Period__c/Registration_Period__c.object-meta.xml
<CustomObject>
    <description>An alternative type of session used for programs where people can choose one or more registration options for a program.</description>
    <label>Registration Period</label>
    <nameField>
        <label>Registration Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>