force-app/main/default/objects/Registration_Period__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Registration Periods</relationshipLabel>
    <relationshipName>Registration_Periods</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>