force-app/main/default/objects/Registration_Period__c/fields/Interested__c.field-meta.xml
<CustomField>
    <fullName>Interested__c</fullName>
    <label>Interested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>